# amtypeid

./: .gitignore  .gitmodules  AMCETypeID.h  CMakeLists.txt  README.md
docs/: Mainpage.h  doxyfile
src/: AMTypeIDConfig.h.in
test/TypeID/: test_AMCETypeID.cpp  test_AMCETypeID_collect.cpp
